# mapi-msg-dumper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  run.example.json
.github/workflows/: ci.yml  release.yml
src/mapi_msg_dumper/: __init__.py  cli.py  main.py
src/mapi_msg_dumper/core/: __init__.py  checkpoint.py  extractor.py  filenames.py  folders_config.py  markdown.py  planning.py  run_config.py
src/mapi_msg_dumper/core/extractors/: base.py  outlook.py  thunderbird.py
tests/core/: test_checkpoint.py  test_filenames.py  test_folders_config.py  test_markdown.py  test_planning.py  test_run_config.py
